update index.html and app.js

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>NotebookLM Millionaire</title>
+    <meta property="og:type" content="website" />
+<meta property="og:url" content="https://notebooklm-2026.netlify.app/" />
+<meta property="og:title" content="The NotebookLM Millionaire: ৩০টি ভাইরাল AI হ্যাক 🚀" />
+<meta property="og:description" content="গুগলের ফ্রি টুল ব্যবহার করে মাসে $১০,০০০ আয়ের কমপ্লিট গাইডবুক। ব্লগ টু পডকাস্ট, অটোমেটেড কোর্স এবং আরও অনেক কিছু শিখুন এই অ্যাপে।" />
+<meta property="og:image" content="https://notebooklm-2026.netlify.app/social-share.png" />
+
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://notebooklm-2026.netlify.app/" />
+<meta property="twitter:title" content="The NotebookLM Millionaire: ৩০টি ভাইরাল AI হ্যাক 🚀" />
+<meta property="twitter:description" content="গুগলের ফ্রি টুল ব্যবহার করে মাসে $১০,০০০ আয়ের কমপ্লিট গাইডবুক। ফ্রিতে পড়ুন।" />
+<meta property="twitter:image" content="https://notebooklm-2026.netlify.app/social-share.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
